Handle Metacritic scores redirection to generic page